CSS-stopped page overflow when cards are clicked

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     position: relative;
+    overflow: hidden;
    }
 #center{
     display: flex;
